--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,26 @@
 <!doctype html>
 <html ng-app="todoApp">
-  <head>
+
+<head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <script src="todo.js"></script>
-    <link rel="stylesheet" href="todo.css">
-  </head>
-  <body>
-    <h2>Todo</h2>
-    <div ng-controller="TodoListController as todoList">
-      <span>{{todoList.remaining()}} of {{todoList.todos.length}} remaining</span>
-      [ <a href="" ng-click="todoList.archive()">archive</a> ]
-      <ul class="unstyled">
-        <li ng-repeat="todo in todoList.todos">
-          <label class="checkbox">
-            <input type="checkbox" ng-model="todo.done">
-            <span class="done-{{todo.done}}">{{todo.text}}</span>
-          </label>
-        </li>
-      </ul>
-      <form ng-submit="todoList.addTodo()">
-        <input type="text" ng-model="todoList.todoText"  size="30"
-               placeholder="add new todo here">
-        <input class="btn-primary" type="submit" value="add">
-      </form>
+    <script src="avatar.js"></script>
+    <link rel="stylesheet" href="avatar.css"> </head>
+
+<body>
+    <div ng-controller="AvatarController as avatarElements">
+        <div id="avatarImage">
+            <span>{{avatarElements.avatarImage()}}</span>
+        </div>
+        <div id="testing">
+        </div>
+        <div id="avatarOutput">
+            <span>{{avatarElements.output()}}</span>
+        </div>
+        <div id="avatarInput">
+            Speech Input (now with text!): <input ng-model="speechIn">
+<h1>You said: {{speechIn}}</h1>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
