4 different colored animations

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div ng-controller="AvatarController as avatarElements">
-        <div id="avatarImage"> <span>{{avatarElements.avatarImage()}}</span> </div>
+        <div id="avatarAnimation"> <span>{{avatarElements.avatarImage()}}</span> </div>
         <div id="testing"> </div>
         <div id="avatarOutput"> <span>Response from app.js: {{up}} <br><br>Response from avatar.js: {{avatarElements.output()}}</span> </div>
         <div id="avatarInput"> Speech Input (now with text!):
