--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,18 @@
     <link rel="stylesheet" type="text/css" href="./avatar.css"> </head>
 
 <body>
-    <div ng-controller="AvatarController as avatarElements">
+    <div ng-controller="AvatarController as ac">
         <div id="box">
-            <div id="textOutput">aaa</div>
+            <div id="textOutput">
+                <h1>{{test}}</h1></div>
             <div id="top"></div>
             <div id="bubble"></div>
             <div id="hat"> </div>
             <div id="animation"></div>
-            <div class="toggler">
-                <div id="textInput" class="ui-widget-content ui-corner-all">
-                    <h3 class="ui-widget-header ui-corner-all">Animate</h3>
-                    <p> {{test}}</p>
-                </div>
-            </div> {{avatarElements.main()}} </div>
+            <div id="textInput">
+                <h1> {{test}}</h1></div>
+        </div>
+    </div>
 </body>
 
 </html>
