New gui. Minor changes

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
             <div id="textOutput">
                 <h1>{{textOutput}}</h1></div></div>
             <div id="top"></div>
-            <div class="animated infinite pulse" id="bubble"></div>
+            <div id="bubble"></div>
             <div id="hat"> </div>
-            <div id="animation"></div>
+            <div id="bunny"></div>
             <div id="textInputBox">
                 <div id="textInput">
                     <h1> {{textInput}}</h1></div>
